--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
   <title>Bootstrap</title>
 </head>
 <body>
-  <header class="">
-    <div class="container ">
-      <div>START Bootstrap</div>
-      <div>H</div>
+  <!----INIZIO HEADER-->
+  <header >
+    <div class="container h-100  ">
+      <div class="row h-100  align-items-center ">
+        <div class="col-5 ">Menù</div>
+        <div class="col d-none d-md-block offset-6 "> LINK LINK LINK</div>
+        <div class="col-1 offset-6 d-md-none  ">H</div>
+      </div>
+    </div>
+  </header>
+   <!----FINE HEADER-->
+  <main>
+    <div class="jumbotron">
+      
     </div>
 
 
-
-
-
-  </header>
-  <main></main>
+  </main>
   <footer></footer>
   
 </body>
