--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
    <!----FINE HEADER-->
   <main>
     <div class="jumbotron">
-      
+      <div class="container d-flex text-center  flex-column ">
+        <div class="">img</div>
+        <h1>H1</h1>
+        <span>STELLA</span>
+        <p>testo testo testo </p>
+        
+
+
+      </div>
     </div>
 
 
