[add] prima section

--- a/index.html
+++ b/index.html
@@ -27,11 +27,25 @@
         <h1>H1</h1>
         <span>STELLA</span>
         <p>testo testo testo </p>
-        
-
-
       </div>
     </div>
+
+    <section class="container ">
+      <div class="text-center ">
+        <h2>PORTFOLIO</h2>
+        <p>text STELLA</p>
+      </div>
+      <div class="row flex-column text-center flex-md-row  ">
+        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
+        
+      </div>
+
+    </section>
 
 
   </main>
