[add]  section contact me

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </header>
    <!----FINE HEADER-->
   <main>
+     <!----INIZIO JUMBO-->
     <div class="jumbotron">
       <div class="container d-flex text-center  flex-column ">
         <div class="">img</div>
@@ -29,27 +30,73 @@
         <p>testo testo testo </p>
       </div>
     </div>
-
+    <!----FINE JUMBO-->
+    <!----INIZIO CARD----->
     <section class="container ">
-      <div class="text-center ">
-        <h2>PORTFOLIO</h2>
+      <div class="row ">
+        <div class="col text-center ">
+          <h2>PORTFOLIO</h2>
         <p>text STELLA</p>
+        </div>
       </div>
+
+
       <div class="row flex-column text-center flex-md-row  ">
-        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col col col-md-6 col-xl-4 ">CARD</div>
-        
+        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
+        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
       </div>
-
     </section>
+     <!----FINE CARD----->
+    <!----INIZIO ABOUT-US-->
+    <section>
+      <div class="about-us">
+        <div class="container-piccolo">
+          <div class="row ">
+            <div class="col text-center ">
+              <h2>PORTFOLIO</h2>
+            <p>text STELLA</p>
+            </div>
+          </div>
+  
+          <div class="row">
+            <div class=" debug-col col-12  col-md-6 "> left</div>
+            <div class=" debug-col col-12 col-md-6 "> right</div>
+          </div>
+        </div>
+      </div>
+    </section>
+     <!----FINE ABOUT-US-->
+     <!--INIZIO CONTACT ME-->
+    <section>
+      <div class="container-piccolo">
+        <div class="row ">
+          <div class="col text-center ">
+            <h2>PORTFOLIO</h2>
+            <p>text STELLA</p>
+          </div>
+        </div>
 
-
+        <div class="row flex-column text-center ">
+          <div class="debug-col mt-2 col ">text</div>
+          <div class="debug-col mt-2 col ">text</div>
+          <div class="debug-col mt-2 col ">text</div>
+          <div class="debug-col mt-2 col ">text</div>
+        </div>
+      </div>
+    </section>
+    <!--FINE CONTACT ME-->
   </main>
-  <footer></footer>
+  <footer>
+    <div class="container ">
+      <div class="row">
+        <div class="debug-col mt-2 col col-md-6 ">CARD</div>
+      </div>
+    </div>
+  </footer>
   
 </body>
 </html>
