--- a/index.html
+++ b/index.html
@@ -91,11 +91,20 @@
     <!--FINE CONTACT ME-->
   </main>
   <footer>
-    <div class="container ">
-      <div class="row">
-        <div class="debug-col mt-2 col col-md-6 ">CARD</div>
+    <section class="footer">
+      <div class="container ">
+        <div class="row text-center ">
+          <div class="debug-col mt-2 col-12  col-md-4 ">TEXT</div>
+          <div class="debug-col mt-2 col-12  col-md-4 ">TEXT</div>
+          <div class="debug-col mt-2 col-12  col-md-4 ">TEXT</div>
+        </div>
       </div>
-    </div>
+    </section>
+    <section class="footer-bottom text-center">
+      <span>TEXT</span>
+    </section>
+
+   
   </footer>
   
 </body>
