--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
   <main>
      <!----INIZIO JUMBO-->
     <div class="jumbotron">
-      <div class="container d-flex text-center  flex-column ">
-        <div class="">img</div>
-        <h1>H1</h1>
-        <span>STELLA</span>
-        <p>testo testo testo </p>
+      <div class="container text-center ">
+        <div class="row flex-column ">
+          <div class="col">img</div>
+          <div class="col">H1</div>
+          <div class="col">STELLA</div>
+          <div class="col"> testo testo testo</div>
+        </div>
       </div>
     </div>
     <!----FINE JUMBO-->
