--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
             <p>text STELLA</p>
           </div>
         </div>
-
+        <div class="container-fluid">
         <div class="row flex-column text-center ">
           <div class="debug-col mt-2 col ">text</div>
           <div class="debug-col mt-2 col ">text</div>
           <div class="debug-col mt-2 col ">text</div>
           <div class="debug-col mt-2 col ">text</div>
         </div>
+      </div>
       </div>
     </section>
     <!--FINE CONTACT ME-->
