--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <title>Bootstrap</title>
 </head>
@@ -13,9 +14,17 @@
   <header >
     <div class="container h-100  ">
       <div class="row h-100  align-items-center ">
-        <div class="col-5 ">Menù</div>
-        <div class="col d-none d-md-block offset-6 "> LINK LINK LINK</div>
-        <div class="col-1 offset-6 d-md-none  ">H</div>
+        <div class="col-10 col-md-9  "><h4><strong>START BOOTSTRAP</strong></h4></div>
+        <div class="col d-none d-md-block col-md-3 d-flex "> 
+          <ul class="d-flex justify-content-between ">
+            <li><a href="#">PROFILO</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </div>
+        <div class=" bt-custom col-2 d-md-none  ">
+           <a href="#"><i class="fa-solid fa-bars"></i></a>
+        </div>
       </div>
     </div>
   </header>
