[add] header right

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <header >
     <div class="container h-100  ">
       <div class="row h-100  align-items-center ">
-        <div class="col-10 col-md-9  "><h4><strong>START BOOTSTRAP</strong></h4></div>
-        <div class="col d-none d-md-block col-md-3 d-flex "> 
-          <ul class="d-flex justify-content-between ">
-            <li><a href="#">PROFILO</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
+        <div class="col-10 col-md-8  "><h4><strong>START BOOTSTRAP</strong></h4></div>
+        <div class="col d-none d-md-block col-md-4 d-flex "> 
+          <ul class="d-flex">
+            <li class="mx-2"><a href="#">PROFILO</a></li>
+            <li class="mx-2"><a href="#">ABOUT</a></li>
+            <li class="mx-2"><a href="#">CONTACT</a></li>
           </ul>
         </div>
         <div class=" bt-custom col-2 d-md-none  ">
