--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
     <div class="jumbotron">
       <div class="container text-center ">
         <div class="row flex-column ">
-          <div class="col">img</div>
-          <div class="col">H1</div>
-          <div class="col">STELLA</div>
-          <div class="col"> testo testo testo</div>
+          <div class="col">
+            <img class="avatar" src="img 2/avatar.svg" alt="">
+          </div>
+          <div class=" col">
+            <h1>START BOOTSTRAP</h1>
+          </div>
+          <div class="col  d-flex justify-content-center  ">
+            <div class="left"></div>
+            <div class="center px-3 "> <i class="fa-solid fa-star"></i></div>
+            <div class="right"></div>
+          </div>
+          <div class="col"> 
+            <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+          </div>
         </div>
       </div>
     </div>
