--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <h1>START BOOTSTRAP</h1>
           </div>
           <div class="col  d-flex justify-content-center  ">
-            <div class="left"></div>
+            <div class=" bg-white left"></div>
             <div class="center px-3 "> <i class="fa-solid fa-star"></i></div>
-            <div class="right"></div>
+            <div class="right bg-white"></div>
           </div>
           <div class="col"> 
             <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
@@ -53,22 +53,50 @@
     </div>
     <!----FINE JUMBO-->
     <!----INIZIO CARD----->
-    <section class="container ">
+    <section class="container py-5  ">
       <div class="row ">
         <div class="col text-center ">
           <h2>PORTFOLIO</h2>
-        <p>text STELLA</p>
+          <div class="col  d-flex justify-content-center  ">
+            <div class="left bg-dark"></div>
+            <div class="center px-3 "> <i class="fa-solid fa-star"></i></div>
+            <div class="right bg-dark"></div>
+          </div>
         </div>
       </div>
 
 
-      <div class="row flex-column text-center flex-md-row  ">
-        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
-        <div class="debug-col mt-4 col col-md-6 col-xl-4 ">CARD</div>
+      <div class="row flex-column text-center flex-md-row ">
+        <div class=" mt-4 col col-md-6 col-xl-4 ">
+          <div class="card-custom">
+            <img class="w-100 " src="img 2/cabin.png" alt="">
+          </div>
+        </div>
+        <div class=" mt-4 col col-md-6 col-xl-4 ">
+          <div class="card-custom">
+            <img class="w-100 " src="img 2/cake.png" alt="">
+          </div>
+        </div>
+        <div class=" mt-4 col col-md-6 col-xl-4 ">
+          <div class="card-custom">
+            <img class="w-100 " src="img 2/circus.png" alt="">
+          </div>
+        </div>
+        <div class=" mt-4 col col-md-6 col-xl-4 ">
+          <div class="card-custom">
+            <img class="w-100 " src="img 2/game.png" alt="">
+          </div>
+        </div>
+        <div class=" mt-4 col col-md-6 col-xl-4 ">
+          <div class="card-custom">
+            <img class="w-100 " src="img 2/safe.png" alt="">
+          </div>
+        </div>
+        <div class=" mt-4 col col-md-6 col-xl-4 ">
+          <div class="card-custom">
+            <img class="w-100 " src="img 2/submarine.png" alt="">
+          </div>
+        </div>
       </div>
     </section>
      <!----FINE CARD----->
@@ -78,14 +106,18 @@
         <div class="container-piccolo">
           <div class="row ">
             <div class="col text-center ">
-              <h2>PORTFOLIO</h2>
-            <p>text STELLA</p>
+              <h2>ABOUT</h2>
+              <div class="col  d-flex justify-content-center  ">
+                <div class=" bg-white left"></div>
+                <div class="center px-3 "> <i class="fa-solid fa-star"></i></div>
+                <div class="right bg-white"></div>
+              </div>
             </div>
           </div>
   
           <div class="row">
-            <div class=" debug-col col-12  col-md-6 "> left</div>
-            <div class=" debug-col col-12 col-md-6 "> right</div>
+            <div class=" col-12 col-md-6 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quas ex fuga alias tenetur doloribus commodi explicabo, totam velit, officiis iusto ab, sit rem corporis. Doloremque eaque illo repudiandae laboriosam?</div>
+            <div class=" col-12 pt-4 col-md-6 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ipsam vero animi debitis quasi officia quod quaerat perspiciatis, eveniet quis, rerum ad pariatur maiores, exercitationem deleniti quidem nemo facere eaque.</div>
           </div>
         </div>
       </div>
