[add] contact me

--- a/index.html
+++ b/index.html
@@ -69,32 +69,32 @@
       <div class="row flex-column text-center flex-md-row ">
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
-            <img class="w-100 " src="img 2/cabin.png" alt="">
+            <img class="w-100 rounded" src="img 2/cabin.png" alt="">
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
-            <img class="w-100 " src="img 2/cake.png" alt="">
+            <img class="w-100 rounded" src="img 2/cake.png" alt="">
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
-            <img class="w-100 " src="img 2/circus.png" alt="">
+            <img class="w-100 rounded" src="img 2/circus.png" alt="">
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
-            <img class="w-100 " src="img 2/game.png" alt="">
+            <img class="w-100 rounded" src="img 2/game.png" alt="">
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
-            <img class="w-100 " src="img 2/safe.png" alt="">
+            <img class="w-100 rounded" src="img 2/safe.png" alt="">
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
-            <img class="w-100 " src="img 2/submarine.png" alt="">
+            <img class="w-100 rounded" src="img 2/submarine.png" alt="">
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
      <!----FINE CARD----->
     <!----INIZIO ABOUT-US-->
     <section>
-      <div class="about-us">
+      <div class="about-us  py-5 ">
         <div class="container-piccolo">
           <div class="row ">
             <div class="col text-center ">
@@ -115,30 +115,37 @@
             </div>
           </div>
   
-          <div class="row">
+          <div class="row pt-4 ">
             <div class=" col-12 col-md-6 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quas ex fuga alias tenetur doloribus commodi explicabo, totam velit, officiis iusto ab, sit rem corporis. Doloremque eaque illo repudiandae laboriosam?</div>
-            <div class=" col-12 pt-4 col-md-6 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ipsam vero animi debitis quasi officia quod quaerat perspiciatis, eveniet quis, rerum ad pariatur maiores, exercitationem deleniti quidem nemo facere eaque.</div>
+            <div class=" col-12 col-md-6 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ipsam vero animi debitis quasi officia quod quaerat perspiciatis, eveniet quis, rerum ad pariatur maiores, exercitationem deleniti quidem nemo facere eaque.</div>
+          </div>
+
+          <div class="d-flex my-4 justify-content-center ">
+            <button class="btn btn-md custom-button"> <i class="fa-solid fa-download"></i> Download</button>
           </div>
         </div>
       </div>
     </section>
      <!----FINE ABOUT-US-->
      <!--INIZIO CONTACT ME-->
-    <section>
+    <section class="contact-me py-5 ">
       <div class="container-piccolo">
         <div class="row ">
           <div class="col text-center ">
-            <h2>PORTFOLIO</h2>
-            <p>text STELLA</p>
+            <h2>CONTACT ME</h2>
+            <div class="col  d-flex justify-content-center  ">
+              <div class="left bg-dark"></div>
+              <div class="center px-3 "> <i class="fa-solid fa-star"></i></div>
+              <div class="right bg-dark"></div>
+            </div>
           </div>
         </div>
-        <div class="container-fluid">
-        <div class="row flex-column text-center ">
-          <div class="debug-col mt-2 col ">text</div>
-          <div class="debug-col mt-2 col ">text</div>
-          <div class="debug-col mt-2 col ">text</div>
-          <div class="debug-col mt-2 col ">text</div>
-        </div>
+        <div class="container-piccolo">
+          <input type="text" class="form-control input-custom py-3" placeholder="Name">
+          <input type="email" class="form-control input-custom py-3" placeholder="Email Address">
+          <input type="text" class="form-control input-custom py-3" placeholder="Phone Number">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Message" class="form-control input-custom"></textarea>
+          <button class="btn btn-secondary mt-3 button-custom">Send</button>
       </div>
       </div>
     </section>
