--- a/index.html
+++ b/index.html
@@ -152,17 +152,57 @@
     <!--FINE CONTACT ME-->
   </main>
   <footer>
-    <section class="footer">
+    <section class="footer ">
       <div class="container ">
         <div class="row text-center ">
-          <div class="debug-col mt-2 col-12  col-md-4 ">TEXT</div>
-          <div class="debug-col mt-2 col-12  col-md-4 ">TEXT</div>
-          <div class="debug-col mt-2 col-12  col-md-4 ">TEXT</div>
+          <div class="debug-col mt-2 col-12  col-md-4 ">
+            <h4>LOCATION</h4>
+            <p>2215 jonh Daniel Drive Clark, MO 54253</p>
+          </div>
+          <div class="debug-col mt-2 col-12  col-md-4 ">
+            <h4>AROUND THE WEB</h4>
+            <a
+            class="btn btn-primary rounded-circle  btn-lg btn-floating"
+            style="background-color: transparent;"
+            href="#!"
+            role="button"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+
+          <a
+          class="btn btn-primary rounded-circle btn-lg btn-floating"
+          style="background-color: transparent;"
+          href="#!"
+          role="button"
+          ><i class="fab fa-google"></i
+        ></a>
+            
+          <a
+          class="btn btn-primary rounded-circle btn-lg btn-floating"
+          style="background-color: transparent;"
+          href="#!"
+          role="button"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+
+        <a
+        class="btn btn-primary rounded-circle btn-lg btn-floating"
+        style="background-color: transparent;"
+        href="#!"
+        role="button"
+        ><i class="fab fa-twitter"></i
+      ></a>
+              
+          </div>
+          <div class="debug-col mt-2 col-12  col-md-4 ">
+            <h4>ABOUT FREELANCER</h4> 
+            <p>Croslonce is o fros to co oron source Bootstran theme created <a class="color-custom" href="#">by Start Boostrap</a></p>
+          </div>
         </div>
       </div>
     </section>
-    <section class="footer-bottom text-center">
-      <span>TEXT</span>
+    <section class="footer-bottom align-content-center  text-center">
+      <p>Copyrght&#169; Yuor web Site 2019</p>
     </section>
 
    
