[add] hover card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!----INIZIO HEADER-->
-  <header >
+  <header  class="fixed-top">
     <div class="container h-100  ">
       <div class="row h-100  align-items-center ">
         <div class="col-10 col-md-8  "><h4><strong>START BOOTSTRAP</strong></h4></div>
@@ -31,7 +31,7 @@
    <!----FINE HEADER-->
   <main>
      <!----INIZIO JUMBO-->
-    <div class="jumbotron">
+    <div class="jumbotron ">
       <div class="container text-center ">
         <div class="row flex-column ">
           <div class="col">
@@ -68,33 +68,51 @@
 
       <div class="row flex-column text-center flex-md-row ">
         <div class=" mt-4 col col-md-6 col-xl-4 ">
-          <div class="card-custom">
+          <div class=" w-100 card-custom">
             <img class="w-100 rounded" src="img 2/cabin.png" alt="">
+            <div class="layover">
+              <i class="fa-solid fa-plus"></i>
+            </div>
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
             <img class="w-100 rounded" src="img 2/cake.png" alt="">
+            <div class="layover">
+              <i class="fa-solid fa-plus"></i>
+            </div>
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
             <img class="w-100 rounded" src="img 2/circus.png" alt="">
+            <div class="layover">
+              <i class="fa-solid fa-plus"></i>
+            </div>
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
             <img class="w-100 rounded" src="img 2/game.png" alt="">
+            <div class="layover">
+              <i class="fa-solid fa-plus"></i>
+            </div>
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
             <img class="w-100 rounded" src="img 2/safe.png" alt="">
+            <div class="layover">
+              <i class="fa-solid fa-plus"></i>
+            </div>
           </div>
         </div>
         <div class=" mt-4 col col-md-6 col-xl-4 ">
           <div class="card-custom">
             <img class="w-100 rounded" src="img 2/submarine.png" alt="">
+            <div class="layover">
+              <i class="fa-solid fa-plus"></i>
+            </div>
           </div>
         </div>
       </div>
